# Average-Image

./: CMakeLists.txt  FaceDetect.cpp  README.md  README.md~
src/: averageImage.h  main.cpp  workingFile.cpp
